--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ html,body {
     padding: 0;
 }
 
+:root{
+    --screen-section-color: #273233;
+    --screen-screen-color: #ffffff;
+    --main-section-color: #273233;
+    --side-section-color: #5d5d5d; 
+    --button-color: #333333;
+}
+
 /* Cover page fully using viewport-relative units */
 body {
     height: 100vh; /* 1vh is 1% of view port height. View port is browser window size. Example: 50cm height will be relative 0.5cm or 1vh. */
@@ -35,33 +43,49 @@ section{
     width: 100%;
 }
 
-.result-section {
-    background-color: lightblue;
+.screen-section {
+    background-color: var(--screen-section-color);
+    display: flex;
+}
+
+.screen {
+    display: block;
+    width: 80%;
+    height: 60%;
+    margin: auto;
+    background-color: var(--screen-screen-color);
+    font-size: 100px;
+    overflow-wrap: break-word;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
 }
 
 .sign-section { 
-    background-color: lightgreen;
+    background-color: var(--main-section-color);
 }
 
 .button-container {
-    width: 100%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-content: center;
-    margin: 3%;
+    margin-top: 3%;
 }
 
 aside {
     width: 30%;
-    background-color: lightcoral;
+    background-color: var(--side-section-color);
     float: right;
     min-height: 50%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
 }
 
 .button{
     width: 20%;
-    height: 5em; /* Relative to font-size of the element. 2em - 2 times, 3em - 3 times */
-    color: gray;
-    margin: 3px;
+    height: 4em; /* Relative to font-size of the element. 2em - 2 times, 3em - 3 times */
+    background: var(--button-color);
+    margin: 4px;
+    font-size: 30px;
+    color: white;
+    border: none;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
 }
